Correct footer spacing and search width

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,12 @@ Forms
   margin-bottom: 15px;
 }
 
+@media (max-width: 768px) {
+  #introSearch {
+    max-width: 90%;
+  }
+}
+
 /**************
 Maruee trendbar
 **************/
